# mcp-learn

./: pyproject.toml
mcp-client/: client.py
mcp-server/: amap_server.py  weather.py
