[project]
name = "mcp-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "mcp[cli]>=1.6.0",
    "openai>=1.76.0",
    "requests>=2.32.3",
    "selenium>=4.32.0",
]
